Fixed body height too big

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,6 @@
 @import '../settings';
 
 .main {
-  height: 100%;
   width: 100%;
 }
 
