--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,6 +9,10 @@
 
 @include foundation-everything;
 
+body, html {
+  height: auto;
+}
+
 .page-title {
   font-weight: bold;
   font-size: 26px;
